# strawberry-django-plus

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: cicd.yml  gh-pages.yml  release.yml  tests.yml
contributing/: index.html
debug-toolbar/: index.html
demo/: models.py  schema.py  settings.py  urls.py
demo/migrations/: 0001_initial.py  0002_tag_remove_milestonecomment_milestone_and_more.py  0003_quiz_assignee_issue_assignees.py  0004_issue_milestone_not_null.py  0005_remove_issue_milestone_not_null.py  0006_favorite.py
docs/: Contributing.md  QueryOptimizer.md  contributing.md  debug-toolbar.md  index.md  migration-guide.md  mutations.md  query-optimizer.md  quickstart.md
migration-guide/: index.html
mutations/: index.html
query-optimizer/: index.html
quickstart/: index.html
search/: search_index.json
strawberry_django_plus/: __init__.py  _relay.py  descriptors.py  directives.py  field.py  fields.py  filters.py  mutations.py  optimizer.py  ordering.py  permissions.py  relay.py  resolvers.py  settings.py  type.py  types.py  utils.py
strawberry_django_plus/gql/: __init__.py  django.py
strawberry_django_plus/integrations/: guardian.py
strawberry_django_plus/management/commands/: export_schema.py
strawberry_django_plus/middlewares/: debug_toolbar.py  user_warmup.py
strawberry_django_plus/mutations/: fields.py  resolvers.py
strawberry_django_plus/templates/strawberry_django_plus/: debug_toolbar.html
strawberry_django_plus/test/: client.py
strawberry_django_plus/utils/: aio.py  inspect.py  printer.py  pyutils.py  query.py  resolvers.py  typing.py
tests/: conftest.py  faker.py  middlewares.py  models.py  schema.py  settings.py  test_aio.py  test_demo.py  test_generated_enum_choices.py  test_mutations.py  test_optimizer.py  test_ordering.py  test_permissions.py  test_printer.py  test_pyutils.py  test_query.py  test_relay.py  test_schema.py  test_type.py  urls.py  utils.py
tests/data/: relay_schema.gql  schema.gql
tests/migrations/: 0001_initial.py  0002_project_status_alter_project_name.py
