[tool.poetry]
name = "strawberry-django-plus"
version = "3.0.2"
description = "Enhanced Strawberry GraphQL integration with Django"
authors = ["Thiago Bellini Ribeiro <thiago@bellini.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blb-ventures/strawberry-django-plus"
repository = "https://github.com/blb-ventures/strawberry-django-plus"
documentation = "https://strawberry-django-plus.readthedocs.io"
keywords = ["strawberry", "django", "graphql", "relay", "optimizer"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
]
packages = [{ include = "strawberry_django_plus" }]
include = ["strawberry_django_plus/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
django = ">= 3.2"
strawberry-graphql = ">=0.187.5"
strawberry-graphql-django = ">= 0.9.4"
typing-extensions = ">= 4.2.0"
django-choices-field = { version = ">=2.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
codecov = "^2.1.12"
django-types = "^0.17.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
django-extensions = "^3.1.5"
ipython = "^8.4.0"
factory-boy = "^3.2.1"
pytest-asyncio = "^0.21.0"
django-debug-toolbar = "^4.0.0"
django-choices-field = "^2.0"
django-guardian = "^2.4.0"
mkdocs = "^1.4.2"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-material = "^9.0.9"
mkdocs-minify-plugin = "^0.6.2"
pymdown-extensions = ">=9.5,<11.0"
Markdown = "^3.3.7"
ruff = "^0.0.272"
debugpy = "^1.6.7"


[tool.poetry.extras]
enum = ["django-choices-field"]

[tool.ruff]
line-length = 100
select = [
  "A",
  "ASYNC100",
  "ASYNC101",
  "ASYNC102",
  "B",
  "BLE",
  "C4",
  "COM",
  "D",
  "D2",
  "D3",
  "D4",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FLY",
  "G",
  "I",
  "ICN001",
  "INP",
  "INT",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "TD",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "D1",
  "D203",
  "D213",
  "PGH003",
  "PLR09",
  "RUF009",
  "SLF001",
  "TD001",
  "TD002",
  "TD003",
  "TRY003",
]
target-version = "py38"
exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "__pycached__",
  "_build",
  "buck-out",
  "build",
  "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.ruff.isort]
known-first-party = ["strawberry-django-plus"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
preview = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
pythonVersion = "3.8"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
exclude = [".venv", "**/migrations", "dist", "docs"]
reportCallInDefaultInitializer = "warning"
reportMatchNotExhaustive = "warning"
reportMissingSuperCall = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUntypedNamedTuple = "error"
reportUnusedExpression = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo.settings"
python_files = "tests/test_*.py"
addopts = "-p no:warnings --nomigrations --cov=./ --cov-report term-missing:skip-covered"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
